@@ -1,4 +1,4 @@
 DIST build-0.3.5.tar.bz2 65872 RMD160 df3b85caae99f1538d2c9c28eb210ed5b3255bb2 SHA1 7a2fa91cea87b97c80568f5fc076861365ebeb61 SHA256 bd18bafafeb6c861932b3a6e2dd2eb1a9a8f9f3f1972b8de1b776b0a8854a08d
-EBUILD build-0.3.5.ebuild 1535 RMD160 df08f62befe422d1e735088c0a682f6a8229774e SHA1 ee33be7844d8aaabb02aa38a6b29f18391d2c057 SHA256 0faac447494c0acc981c666d5ee61182d6d1cb1ee70f8112e9edad8e0905bb85
-MISC ChangeLog 638 RMD160 68320907dc7ac8e947e978c63ed2651b575966b2 SHA1 bfffb2a6f0be5b20f91d602c7876f21e0db68e50 SHA256 7d062b6977bff7bd5a2ee66e101285106902dbe975c3e6aae23f4f89e458c93c
+EBUILD build-0.3.5.ebuild 1523 RMD160 b81553903fcad6d6e4d5a60212acfda6fc3ec267 SHA1 40282575925bc07c4796dc0e589fc92b49a91846 SHA256 31c45dcae6bdb28ae7b9b1c502ea9560bcd35f82737574e74b4f2a60c3894e05
+MISC ChangeLog 832 RMD160 c6f4dec82ddb7229a41221a43203a0806214b091 SHA1 20cd72d3b6eeda8f237390cd6d3e12d258e72646 SHA256 5f54e33cfb439bb8f8223af750e12400ebc8888251d90790fb9bd9b69b7c4d67
 MISC metadata.xml 290 RMD160 477ae5b5f81ab27749d5e68e95bb3cde684ec753 SHA1 6c94a51c1738c49bdf08b92fc7e6583875f65781 SHA256 c1f650400a8fb43cc289484e44c1620b2f8addd8a8069e197efca20347ddcaf7
