@@ -6,20 +6,19 @@ EAPI=2
 
 inherit versionator
 
-MY_PV=$(get_version_component_range 1-2)
+SLOT=$(get_version_component_range 1-2)
 DESCRIPTION="A massively-parallel software build system implemented on top of GNU make"
 HOMEPAGE="http://kolpackov.net/projects/build/"
-SRC_URI="ftp://kolpackov.net/pub/projects/${PN}/${MY_PV}/${P}.tar.bz2"
+SRC_URI="ftp://kolpackov.net/pub/projects/${PN}/${SLOT}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
-SLOT="0"
 KEYWORDS="~amd64"
 IUSE="doc examples"
 
 src_prepare() {
 	if use examples; then
 		# fix examples to use installed build
-		sed -i -e "s;^include.\*bootstrap.make\$;include build-${MY_PV}/bootstrap.make;" \
+		sed -i -e "s;^include.\*bootstrap.make\$;include build-${SLOT}/bootstrap.make;" \
 			$(find examples -name bootstrap.make) || die "patching examples failed"
 		rm examples/cxx/hello/hello/build/import/libhello || die "preparing examples for installation failed"
 	fi
